--- a/AndroidChat-master/app/src/main/res/layout/activity_main.xml
+++ b/AndroidChat-master/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,13 @@
 
     tools:context=".MainActivity">
 
-
+    <ListView
+        android:id="@+id/listheader"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/list"
+        android:layout_alignParentTop="true"
+        android:transcriptMode="alwaysScroll" />
     <ListView
         android:id="@+id/list"
         android:layout_width="fill_parent"
